# flight_agent

./: README.md  app.py  pyproject.toml  recommendation.md  requirements.txt
src/flight_agent/: crew.py  main.py
src/flight_agent/config/: agents.yaml  tasks.yaml
src/flight_agent/tools/: custom_tool.py
