[project]
name = "flight_agent"
version = "0.1.0"
description = "flight_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.12.2",
    "langchain-apify>=0.1.6",
]

[project.scripts]
flight_agent = "flight_agent.main:run"
run_crew = "flight_agent.main:run"
train = "flight_agent.main:train"
replay = "flight_agent.main:replay"
test = "flight_agent.main:test"
run_with_trigger = "flight_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
